force-app/main/default/objects/Account/fields/gr_AgencyCode__c.field-meta.xml
<CustomField>
    <fullName>gr_AgencyCode__c</fullName>
    <description>A code denoting the primary organization within the Federal agency that awarded, executed, or is otherwise responsible for the grant transaction.</description>
    <externalId>true</externalId>
    <label>Agency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>