force-app/main/default/objects/Account/fields/gr_AgencyIdentifier__c.field-meta.xml
<CustomField>
    <fullName>gr_AgencyIdentifier__c</fullName>
    <description>A 3-digit Common Governmentwide Accounting Classification (CGAC) code assigned to the Federal agency department or establishment by the Treasury.</description>
    <label>Agency Identifier</label>
    <length>3</length>
    <type>Text</type>
</CustomField>