force-app/main/default/objects/Account/fields/gr_Applicant_Congressional_District__c.field-meta.xml
<CustomField>
    <fullName>gr_Applicant_Congressional_District__c</fullName>
    <label>Applicant Congressional District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>