force-app/main/default/objects/Account/fields/gr_BillingCountyName__c.field-meta.xml
<CustomField>
    <fullName>gr_BillingCountyName__c</fullName>
    <description>A name of a county/parish of the Agency&apos;s legal business address.</description>
    <label>Billing County Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>