force-app/main/default/objects/Account/fields/gr_BusinessType__c.field-meta.xml
<CustomField>
    <fullName>gr_BusinessType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A code denoting the legal entity&apos;s business or organization type.</description>
    <inlineHelpText>The legal entity&apos;s business or organization type.</inlineHelpText>
    <label>Business Type</label>
    <referenceTo>BusinessType</referenceTo>
    <relationshipLabel>Agency Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>