force-app/main/default/objects/Account/fields/gr_Delinquent_Debt_Explanation__c.field-meta.xml
<CustomField>
    <fullName>gr_Delinquent_Debt_Explanation__c</fullName>
    <label>Delinquent Debt Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>