force-app/main/default/objects/Account/fields/gr_Delinquent_Debt_Indicator__c.field-meta.xml
<CustomField>
    <fullName>gr_Delinquent_Debt_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delinquent Debt Indicator</label>
    <type>Checkbox</type>
</CustomField>