force-app/main/default/objects/Account/fields/gr_DivisionName__c.field-meta.xml
<CustomField>
    <fullName>gr_DivisionName__c</fullName>
    <description>Enter the name of the primary organizational unit, department, or division that will undertake the assistance activity</description>
    <label>Division Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>