force-app/main/default/objects/Account/fields/gr_EmployerTaxpayerIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>gr_EmployerTaxpayerIdentificationNumber__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>EIN/TIN</inlineHelpText>
    <label>Employer/Taxpayer Identification Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>