force-app/main/default/objects/Account/fields/gr_GroupContactMethod__c.field-meta.xml
<CustomField>
    <fullName>gr_GroupContactMethod__c</fullName>
    <description>A group contact email address, postal address, phone number, etc. that multiple people access, so that someone will respond even if others are unexpectedly absent during critical periods.</description>
    <inlineHelpText>A group contact email address, postal address, phone number, etc. that multiple people access, so that someone will respond even if others are unexpectedly absent during critical periods.</inlineHelpText>
    <label>Group Contact Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>