force-app/main/default/objects/Account/fields/gr_UEI__c.field-meta.xml
<CustomField>
    <fullName>gr_UEI__c</fullName>
    <description>A Unique Entity Identifier number for a legal entity involved in the grants management process assigned during the entity validation process.</description>
    <externalId>true</externalId>
    <inlineHelpText>A Unique Entity Identifier number for a legal entity involved in the grants management process assigned during the entity validation process.</inlineHelpText>
    <label>Unique Entity Identifier</label>
    <length>12</length>
    <type>Text</type>
</CustomField>