force-app/main/default/objects/Account/recordTypes/gr_Agency.recordType-meta.xml
<RecordType>
    <fullName>gr_Agency</fullName>
    <active>true</active>
    <description>default record type to track various agencies in the funding lifecycle.</description>
    <label>Agency</label>
</RecordType>